[project]
name = "dropbox-paper-export"
version = "0.1.0"
description = "Export Dropbox Paper documents to markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pylint
    "PL",
]
