[project]
name = "dropbox-paper-export"
version = "0.1.0"
description = "Export Dropbox Paper documents to markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dropbox==12.0.2",
    "requests==2.32.5",
    "tqdm==4.67.1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pylint
    "PL",
]
ignore = [
    # magic-value-comparison https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "PLR2004", 
]
